--- a/articles/16 IO.md
+++ b/articles/16 IO.md
@@ -6,3 +6,945 @@
 - File(String pathname) :将一个字符串路径封装成File对象
 - File(String parent,String child):传入一个父级路径和子级路径
 - File(File parent,String child):传入一个File类型的父级路径和子级路径
+
+## 1.3 File类创建和删除功能
+- boolean createNewFile():指定路径不存在该文件时时创建文件,返回true,否则返回false
+- boolean mkdir():当指定的单级文件夹不存在时创建文件夹并返回true，否则返回false  
+- boolean mkdirs():当指定的多级文件夹某一级文件夹不存在时,创建多级文件夹并返回true,否则返回false
+- boolean delete():删除文件或者删除单级文件夹
+
+## 1.4 File类的判断功能
+- boolean exists():判断指定路径的文件或文件夹是否存在
+- boolean isAbsolute():判断当前路路径是否是绝对路径
+- boolean isDirectory():判断当前的目录是否存在
+- boolean isFile():判断当前路径是否是一个文件
+- boolean isHidden():判断当前路径是否是隐藏文件
+
+## 1.5 File类的获取功能和修改名字功能
+- File getAbsoluteFile(): 获取文件的绝对路径,返回File对象
+- String getAbsolutePath(): 获取文件的绝对路径,返回路径的字符串
+- String getParent(): 获取当前路径的父级路径,以字符串形式返回该父级路径
+- File getParentFile(): 获取当前路径的父级路径,以字File对象形式返回该父级路径
+- String getName(): 获取文件或文件夹的名称
+- String getPath(): 获取File对象中封装的路径
+- long lastModified(): 以毫秒值返回最后修改时间
+- long length(): 返回文件的字节数
+- boolean renameTo(File dest): 将当前File对象所指向的路径 修改为 指定File所指向的路径
+
+## 1.6 File类的其它获取功能
+- String[] list():以字符串数组的形式返回当前路径下所有的文件和文件夹的名称
+- File[] listFiles():以File对象的形式返回当前路径下所有的文件和文件夹的名称
+- static File[] listRoots():获取计算机中所有的盘符
+
+## 1.7 File类两个案例
+### 1.7.1 输出指定目录下所有的java文件名（包含子目录）
+
+```java
+import java.io.File;
+
+/*
+ * 需求：输出指定目录下所有的java文件名（包含子目录）
+ */
+public class RecurrenceTest {
+	public static void main(String[] args) {
+		File f = new File("src");
+		//File f = new File("src\\com\\itheima_01\\RecurrenceDemo.java");
+		method(f);
+	}
+
+	public static void method(File file) {
+		if(file.isDirectory()) {
+			File[] files = file.listFiles();
+			for (File f : files) {
+				//判断是否是文件对象
+				if(f.isFile()) {
+					if(f.getName().endsWith(".java")) {
+						System.out.println(f.getName());
+					}
+				}
+				else if(f.isDirectory()){
+					//是一个目录对象
+					method(f);
+				}
+			}
+		}
+	}
+
+	//输出指定目录下的所有java文件名（不包含子目录）
+	public static void method2(File file) {
+		if(file.isDirectory()) {
+			File[] files = file.listFiles();
+			for (File f : files) {
+				//判断是否是文件对象
+				if(f.isFile()) {
+					if(f.getName().endsWith(".java")) {
+						System.out.println(f.getName());
+					}
+				}
+			}
+		}
+	}
+}
+```
+
+### 1.7.2 删除指定的目录（包含子目录）
+```java
+import java.io.File;
+
+/*
+ * 需求：删除指定的目录（包含子目录）
+ *
+ * 注意：如果要删除一个目录，则需要先删除这个目录下的所有子文件和子目录
+ *
+ */
+public class RecurrenceTest2 {
+	public static void main(String[] args) {
+		File f = new File("d:\\a");
+		method(f);
+	}
+
+	//删除指定目录下所有文件和目录
+	public static void method(File file) {
+		if(file.isDirectory()) {
+			//干掉自己所有的子文件和子目录
+			//获取所有的子文件和子目录
+			File[] files = file.listFiles();
+			for (File f : files) {
+				if(f.isFile()) {
+					//直接干掉他
+					System.out.println(f.getName());
+					f.delete();
+				}
+				else if(f.isDirectory()) {
+					//继续查看是否还有文件和子目录
+					method(f);
+				}
+			}
+
+			//干掉自己
+			System.out.println(file.getName());
+			file.delete();
+		}
+	}
+}
+```
+
+# 第2章	字符流与字节流
+## 2.1	概述
+- IO分类
+  - 流向
+    - 输入流 读取数据 FileReader Reader
+    - 输出流 写入数据 FileWriter Writer
+
+- 数据类型
+  - 字节流
+    - 字节输入流 读取数据 InputStream
+    - 字节输出流 写入数据 OutputStream
+  - 字符流
+    - 字符输入流 读取数据 Reader
+    - 字符输出流 写入数据 Writer
+
+## 2.2 利用字符流复制文本文件
+利用字符流将当前工程下的IODemo.java拷贝到d盘的a文件夹下
+```java
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
+
+/*
+ * 使用字符流复制文本文件
+ *
+ * 数据源		IODemo.java
+ * 目的地		d:\\IODemo.java
+
+ * 	
+ */
+public class FileCopyDemo {
+	public static void main(String[] args) throws IOException  {
+		//创建字符输入流对象
+		FileReader fr = new FileReader("IODemo.java");
+		//创建字符输出流对象
+		FileWriter fw = new FileWriter("d:\\IODemo.java");
+
+		//一次读写一个字符
+
+		/*int ch;
+		while((ch = fr.read()) != -1) {
+			fw.write(ch);
+			fw.flush();
+		}*/
+
+		//一次读写一个字符数组
+		int len;//用于存储读到的字符个数
+		char[] chs = new char[1024];
+		while((len = fr.read(chs)) != -1) {
+			fw.write(chs,0,len);
+			fw.flush();
+		}
+
+		//释放资源
+		fw.close();
+		fr.close();
+	}
+}
+```
+
+## 2.3 利用字节流复制文本文件
+利用字节流将当前工程下的IODemo.java拷贝到d盘下
+```java
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+/*
+ * 使用字节流复制文本文件
+ *
+ * 数据源		IODemo.java
+ * 目的地		d:\\a\\IODemo.java
+ */
+public class FileCopyDemo {
+	public static void main(String[] args) throws IOException  {
+		//创建字节输入流对象
+		FileInputStream fis = new FileInputStream("IODemo.java");
+		//创建字节输出流对象
+		FileOutputStream fos = new FileOutputStream("d:\\a\\IODemo.java");
+
+		//一次读写一个字节
+		/*int by;
+		while((by = fis.read()) != -1) {
+			fos.write(by);
+		}*/
+		//一次读写一个字节数组
+		int len;//存储读到的字节个数
+		byte[] bys = new byte[1024];
+		while((len = fis.read(bys)) != -1) {
+			fos.write(bys,0,len);
+		}
+
+		//释放资源
+		fos.close();
+		fis.close();
+	}
+}
+```
+
+## 2.4 复制图片
+字节流可以操作所有类型的文件,因为所有的文件在计算机中都是以字节形式存储
+而字符流只能用来操作纯文本类型的文件,不能操作字节类型的文件
+
+```java
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
+
+/*
+ * 分别使用字符流和字节流复制图片
+ *
+ * 二进制文件只能使用字节流进行复制（使用windows自带记事本打开读不懂的）
+ * 文本文件的复制即可使用字符流，也可以使用字节流
+ *
+ */
+public class CopyImage {
+	public static void main(String[] args) throws IOException  {
+		//method();
+
+		//创建字节输入流对象
+		FileInputStream fis = new FileInputStream("传智学院.jpg");
+		//创建字节输出流对象
+		FileOutputStream fos = new FileOutputStream("d:\\传智学院.jpg");
+
+		//一次读写一个字节数组
+		int len;//用于存储读到的字节个数
+		byte[] bys = new byte[1024];
+		while((len = fis.read(bys)) != -1) {
+			fos.write(bys,0,len);
+		}
+
+		//释放资源
+		fos.close();
+		fis.close();
+	}
+
+	private static void method() throws FileNotFoundException, IOException {
+		//创建字符输入流对象
+		FileReader fr = new FileReader("传智学院.jpg");
+		//创建字符输出流对象
+		FileWriter fw = new FileWriter("d:\\传智学院.jpg");
+
+		//一次读写一个字符数组
+		int len;//用于存储读到的字符个数
+		char[] chs = new char[1024];
+		while((len = fr.read(chs)) != -1) {
+			fw.write(chs,0,len);
+			fw.flush();
+		}
+
+		//释放资源
+		fw.close();
+		fr.close();
+	}
+}
+```
+
+# 第3章	标准输入流 & 转换流 & 打印流
+## 3.1	标准输入输出流
+- public static final InputStream in:标准输入流
+- public static final PrintStream out:标准输出流
+
+## 3.2 转换流
+### 3.2.1 OutputStreamWriter:将字节输出流转换为字符输出流
+```java
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.io.Writer;
+
+/*
+ * 需求：读取项目根目录下的SystemInOutDemo.java，并输出到命令行
+ *
+ * 数据源：项目根目录下的SystemInOutDemo.java	BufferedReader
+ * 目的地：命令行	System.out
+ *
+ *
+ * 由于标准输出流是一个字节输出流，所以只能输出字节或者字节数组，但是我们读取到的数据则是字符串，如果想进行输出还需要转换成字节数组
+ * 我们要想通过标准输出流输出字符串，把标准输出流转换成一种字符输出流即可，OutputStreamWriter
+ *
+ * OutputStreamWriter(OutputStream out) :转换流，把字节输出流转换成字符输出流
+ *
+ *
+ */
+public class OutputStreamWriterDemo {
+	public static void main(String[] args) throws IOException   {
+		//method2();
+		//创建输入流对象
+		BufferedReader br = new BufferedReader(new FileReader("SystemInOutDemo.java"));
+		//创建输出流对象
+		//OutputStream os = System.out;
+		//Writer w = new OutputStreamWriter(System.out);//多态，父类型引用指向子类对象
+		//BufferedWriter bw = new BufferedWriter(w);
+		BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+		//进行数据的读写
+		String line;//用于存储读取到的数据
+		while((line = br.readLine()) != null) {
+			bw.write(line);
+			bw.newLine();
+		}
+		//释放资源
+		bw.close();
+		br.close();
+	}
+
+	private static void method2() throws FileNotFoundException, IOException {
+		//创建输入流对象
+		BufferedReader br = new BufferedReader(new FileReader("SystemInOutDemo.java"));
+		//创建输出流对象
+		//OutputStream os = System.out;
+		Writer w = new OutputStreamWriter(System.out);//多态，父类型引用指向子类对象
+
+		//进行数据的读写
+		String line;//用于存储读取到的数据
+		while((line = br.readLine()) != null) {
+			w.write(line);
+			w.write("\r\n");
+		}
+
+		//释放资源
+		w.close();
+		br.close();
+	}
+
+	private static void method() throws FileNotFoundException, IOException {
+		//创建输入流对象
+		BufferedReader br = new BufferedReader(new FileReader("SystemInOutDemo.java"));
+		//创建输出流对象
+		OutputStream os = System.out;
+
+		String line;//用于存储读取到的数据
+		while((line = br.readLine()) != null) {
+			os.write(line.getBytes());
+			os.write("\r\n".getBytes());
+		}
+
+		//释放资源
+		os.close();
+		br.close();
+	}
+}
+```
+
+### 3.2.2 InputStreamReader:将字节输入流转换为字符输入流
+
+
+
+```java
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.Reader;
+/*
+ * 打印流：
+ * 		PrintStream
+ * 		PrintWriter
+ * 			可以自动换行，println()
+ * 			不能输出字节，但是可以输出其他任意类型
+ * 			通过某些配置，可以实现自动刷新（只有在调用 println、printf 或 format才有用）
+ * 			也是包装流，不具备写出功能
+ * 			可以把字节输出流转换成字符输出流
+ *
+ * 注意：只能输出不能输入
+ *
+ */
+
+public class InputStreamReaderDemo {
+	 public static void main(String[] args) throws IOException  {
+  		//创建输入流对象
+  		InputStream is = System.in;
+  		Reader r = new InputStreamReader(is);
+  		//创建输出流对象
+  		FileWriter fw = new FileWriter("a.txt");
+
+  		//读写数据
+  		char[] chs = new char[1024];
+  		int len;
+  		while((len = r.read(chs)) != -1) {
+  			fw.write(chs,0,len);
+  			fw.flush();
+  		}
+
+  		//释放资源
+  		fw.close();
+  		is.close();
+  	}
+
+ 	private static void method() throws IOException {
+ 		//创建输入流对象
+ 		InputStream is = System.in;
+ 		//创建输出流对象
+ 		FileWriter fw = new FileWriter("a.txt");
+
+ 		//读写数据
+ 		byte[] bys = new byte[1024];
+ 		int len;//用于存储读取到的字节个数
+ 		while((len = is.read(bys)) != -1) {
+ 			fw.write(new String(bys,0,len));
+ 			fw.flush();
+ 		}
+
+ 		//释放资源
+ 		fw.close();
+ 		is.close();
+ 	}
+}
+```
+
+## 3.3 打印流
+打印流添加输出数据的功能，使它们能够方便地打印各种数据值表示形式.
+
+字符打印流	PrintWriter
+- void print(String str): 输出任意类型的数据，
+- void println(String str): 输出任意类型的数据，自动写入换行操作
+
+### 3.3.1 实例代码1
+```java
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.PrintWriter;
+
+/*
+ * 打印流：
+ * 		PrintStream
+ * 		PrintWriter
+ * 			可以自动换行，println()
+ * 			不能输出字节，但是可以输出其他任意类型
+ * 			通过某些配置，可以实现自动刷新（只有在调用 println、printf 或 format才有用）
+ * 			也是包装流，不具备写出功能
+ * 			可以把字节输出流转换成字符输出流
+ *
+ * 注意：只能输出不能输入
+ *
+ *  
+ */
+public class PrintWriterDemo {
+	public static void main(String[] args) throws IOException  {
+		//创建打印流对象
+		PrintWriter pw = new PrintWriter("b.txt");
+
+		//写出数据
+		pw.write("hello");
+		pw.write("world");
+		pw.write("java");
+
+		//释放资源
+		pw.close();
+	}
+}
+```
+
+### 3.3.2 实例代码2
+利用打印流实现自动换行与自动更新
+```java
+import java.io.FileNotFoundException;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.PrintWriter;
+
+/*
+ * 打印流的特有功能：
+ * 		自动换行 使用方法println()实现自动换行
+ * 		自动刷新  创建PrintWriter对象时启动自动刷新开关，并且使用println等3个方法可以实现自动刷新
+ *
+ * 注意：创建FileWriter对象时boolean参数是是否追加，
+ * 		而创建打印流对象的boolean类型参数是是否自动刷新
+ */
+public class PrintWriterDemo2 {
+	public static void main(String[] args) throws IOException  {
+		//method();
+		//创建打印流对象
+		//PrintWriter pw = new PrintWriter("d.txt");
+
+		PrintWriter pw = new PrintWriter(new FileWriter("d.txt"),true);
+		pw.println("hello");
+		pw.println("world");
+		pw.println("java");
+		//释放资源
+		//pw.close();
+	}
+
+	private static void method() throws FileNotFoundException {
+		//创建打印流对象
+		PrintWriter pw = new PrintWriter("c.txt");
+
+		/*pw.write("hello");
+		pw.write("world");
+		pw.write("java");*/
+
+		pw.print("hello");
+		pw.println("world");
+		pw.println("java");
+
+		//释放资源
+		pw.close();
+	}
+}
+```
+
+### 3.3.3 实例代码3
+利用打印流将根目录下的SystemInOutDemo.java复制到d:\\SystemInOutDemo.java下
+```java
+import java.io.BufferedReader;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.PrintWriter;
+
+/*
+ * 使用打印流复制文本文件
+ *
+ * 数据源	SystemInOutDemo.java	BufferedReader
+ * 目的地	d:\\SystemInOutDemo.java	PrintWriter
+ *
+ */
+public class PrintWriterDemo3 {
+	public static void main(String[] args) throws IOException  {
+		//创建输入流对象
+		BufferedReader br = new BufferedReader(new FileReader("SystemInOutDemo.java"));
+		//创建打印流对象
+		PrintWriter pw = new PrintWriter(new FileWriter("d:\\SystemInOutDemo.java"),true);
+
+		String line;//用于存储读取到的每行数据
+		while((line = br.readLine()) != null) {
+			pw.println(line);
+		}
+
+		//释放资源
+		pw.close();
+		br.close();
+	}
+}
+```
+
+# 第4章	对象操作流
+## 4.1 概述
+用于从流中读取对象的
+- ObjectInputStream 称为**反序列化流**,利用输入流从文件中读取对象
+- ObjectOutputStream 称为**序列化流**,利用输出流向文件中写入对象
+
+ObjectOutputStream 称为 序列化流,利用输出流向文件中写入对象
+
+## 4.2 利用序列化流读写对象
+### 4.2.1 实例代码1
+```java
+import java.io.Serializable;
+public class Student implements Serializable {
+
+	String name;
+	int age;
+	public Student(String name,int age) {
+		this.name = name;
+		this.age = age;
+	}
+
+	@Override
+	public String toString() {
+		return "Student [name=" + name + ", age=" + age +"]";
+	}
+}
+```
+
+```java
+import java.io.EOFException;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+/*
+ * 使用对象输出流和读对象输入流写对象
+ * Exception in thread "main" java.io.NotSerializableException: com.itheima_07.Student
+ * Serializable:序列号，是一个标识接口，只起标识作用，没有方法
+ * 				当一个类的对象需要IO流进行读写的时候，这个类必须实现该接口
+ *
+ * Exception in thread "main" java.io.EOFException:当输入过程中意外到达文件或流的末尾时，抛出此异常。
+ *
+ */
+public class ObjectOutputStreamDemo {
+	public static void main(String[] args) throws IOException, ClassNotFoundException  {
+		//method();
+		//创建对象输入流的对象
+		ObjectInputStream ois = new ObjectInputStream(new FileInputStream("a.txt"));
+		//读取对象
+		/*Object obj = ois.readObject();
+		System.out.println(obj);
+
+		Object obj2 = ois.readObject();
+		System.out.println(obj2);
+
+		Object obj3 = ois.readObject();
+		System.out.println(obj3);*/
+
+		try {
+			while(true) {
+				Object obj = ois.readObject();
+				System.out.println(obj);
+			}
+		} catch(EOFException e) {
+			System.out.println("读到了文件的末尾");
+		}
+
+		//释放资源
+		ois.close();
+	}
+
+	private static void method() throws IOException, FileNotFoundException {
+		//创建对象输出流的对象
+		//FileOutputStream fos = new FileOutputStream("a.txt");
+		//ObjectOutputStream oos = new ObjectOutputStream(fos);
+		ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("a.txt"));
+
+		//创建学生对象
+		Student s = new Student("zhangsan",18);
+		Student s2 = new Student("lisi",19);
+		//写出学生对象
+		oos.writeObject(s);
+		oos.writeObject(s2);
+
+		//释放资源
+		oos.close();
+	}
+}
+```
+
+### 4.2.2 实例代码2 使用字符流复制文本文件
+```java
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
+
+/*
+ * 使用字符流复制文本文件
+ *
+ * 数据源		IODemo.java
+ * 目的地		d:\\IODemo.java
+ */
+public class FileCopyDemo {
+	public static void main(String[] args) throws IOException  {
+		//创建字符输入流对象
+		FileReader fr = new FileReader("IODemo.java");
+		//创建字符输出流对象
+		FileWriter fw = new FileWriter("d:\\IODemo.java");
+
+		//一次读写一个字符
+
+		/*int ch;
+		while((ch = fr.read()) != -1) {
+			fw.write(ch);
+			fw.flush();
+		}*/
+
+		//一次读写一个字符数组
+		int len;//用于存储读到的字符个数
+		char[] chs = new char[1024];
+		while((len = fr.read(chs)) != -1) {
+			fw.write(chs,0,len);
+			fw.flush();
+		}
+
+		//释放资源
+		fw.close();
+		fr.close();
+	}
+}
+```
+
+## 4.3 解决对象输入流读取对象出现异常的问题
+```java
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.util.ArrayList;
+
+/*
+ * 解决对象输入流读取对象出现异常的问题
+ *
+ */
+public class ObjectOutputStreamDemo3 {
+	public static void main(String[] args) throws IOException, ClassNotFoundException   {
+		//method();
+
+		//创建对象输入流的对象
+		ObjectInputStream ois = new ObjectInputStream(new FileInputStream("b.txt"));
+		//读取数据
+		Object obj = ois.readObject();
+		//System.out.println(obj);
+
+		//向下转型，获取具体的子类对象
+		ArrayList<Student> list = (ArrayList<Student>) obj;
+		for (Student student : list) {
+			System.out.println(student);
+		}
+
+		//释放资源
+		ois.close();
+	}
+
+	private static void method() throws IOException, FileNotFoundException {
+		//创建对象输出流的对象
+		ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("b.txt"));
+		//创建集合对象
+		ArrayList<Student> list = new ArrayList<Student>();
+		//添加学生对象
+		list.add(new Student("wangwu",30));
+		list.add(new Student("zhaoliu",28));
+		//写出集合对象
+		oos.writeObject(list);
+
+		//释放资源
+		oos.close();
+	}
+}
+```
+
+## 4.4 解决读写对象版本不一致问题
+```java
+import java.io.Serializable;
+
+public class Student implements Serializable {
+	private static final long serialVersionUID = 6361890890437825953L;
+	String name;
+	int age;
+	String gender;
+
+	public Student(String name,int age) {
+		this.name = name;
+		this.age = age;
+	}
+
+	@Override
+	public String toString() {
+		return "Student [name=" + name + ", age=" + age + ", gender=" + gender + "]";
+	}
+}
+```
+
+```java
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+
+/*
+ * 解决对实现序列化接口出现的黄色警告问题
+ * Exception in thread "main" java.io.InvalidClassException
+ * 当 Serialization 运行时检测到某个类具有以下问题之一时，抛出此异常。
+		该类的序列版本号与从流中读取的类描述符的版本号不匹配
+		该类包含未知数据类型
+		该类没有可访问的无参数构造方法
+ *
+ */
+public class ObjectOutputStreamDemo4 {
+	public static void main(String[] args) throws IOException, ClassNotFoundException  {
+		//method();
+		method2();
+	}
+
+	//读取学生对象
+	private static void method2() throws IOException, FileNotFoundException, ClassNotFoundException {
+		//创建对象输入流的对象
+		ObjectInputStream ois = new ObjectInputStream(new FileInputStream("c.txt"));
+		//读取对象
+		Object obj = ois.readObject();
+		System.out.println(obj);
+		//释放资源
+		ois.close();
+	}
+
+	//写出学生对象
+	private static void method() throws IOException, FileNotFoundException {
+		//创建对象输出流的对象
+		ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("c.txt"));
+		//创建的学生对象
+		Student s = new Student("qianqi",28);
+		//写出学生对象
+		oos.writeObject(s);
+		//释放资源
+		oos.close();
+	}
+}
+```
+
+# 第5章	Properties集合
+## 5.1 Properties介绍
+Properties 类表示了一个持久的属性集。Properties 可保存在流中或从流中加载。属性列表中每个键及其对应值都是一个字符串。
+
+特点：
+- Hashtable的子类，map集合中的方法都可以用
+- 该集合没有泛型。键值都是字符串
+- 它是一个可以持久化的属性集。键值可以存储到集合中，也可以存储到持久化的设备(硬盘、U盘、光盘)上。键值的来源也可以是持久化的设备
+- 有和流技术相结合的方法
+待补图
+
+## 5.2 利用Properties存储键值对
+```java
+import java.util.Map;
+import java.util.Properties;
+import java.util.Set;
+
+/*
+ * Properties：表示了一个持久的属性集，属性列表中每个键及其对应值都是一个字符串
+ *
+ * 构造方法：
+ * 		Properties()
+ */
+public class PropertiesDemo2 {
+	public static void main(String[] args) {
+		//创建属性列表对象
+		Properties prop = new Properties();
+		//添加映射关系
+		prop.put("CZBK001", "zhangsan");
+		prop.put("CZBK002", "lisi");
+		prop.put("CZBK003", "wangwu");
+
+		//遍历属性列表
+		//获取所有的key，通过key获取value
+		Set<Object> keys = prop.keySet();
+		for (Object key : keys) {
+			Object value = prop.get(key);
+			System.out.println(key + "=" + value);
+		}
+		System.out.println("------------------");
+		//获取所有的结婚证对象
+		Set<Map.Entry<Object,Object>> entrys = prop.entrySet();
+		for (Map.Entry<Object, Object> entry : entrys) {
+			Object key = entry.getKey();
+			Object value = entry.getValue();
+			System.out.println(key + "=" + value);
+		}
+	}
+}
+```
+
+## 5.3 Properties与流结合使用
+```java
+import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.util.Properties;
+
+/*
+ * Properties和IO流结合的功能：
+			void load(Reader reader)
+			void list(PrintWriter out)
+			void store(Writer writer, String comments)
+ *
+ */
+public class PropertiesDemo2 {
+	public static void main(String[] args) throws IOException{
+		//method();
+		//method2();
+		//创建属性列表对象
+		Properties prop = new Properties();
+		//添加映射关系
+		prop.setProperty("CZBK001", "zhangsan");
+		prop.setProperty("CZBK002", "lisi");
+		prop.setProperty("CZBK003", "wangwu");
+		//创建输出流对象
+		FileWriter fw = new FileWriter("e.txt");
+
+		//void store(Writer writer, String comments)
+		prop.store(fw, "hello world");
+
+		//释放资源
+		fw.close();
+
+
+	}
+
+	private static void method2() throws FileNotFoundException, IOException {
+		//创建属性列表对象
+		Properties prop = new Properties();
+		//创建一个输入流对象
+		FileReader fr = new FileReader("d.txt");
+
+		//void load(Reader reader)
+		prop.load(fr);
+
+		//释放资源
+		fr.close();
+
+		System.out.println(prop);
+	}
+
+	private static void method() throws FileNotFoundException {
+		//创建属性列表对象
+		Properties prop = new Properties();
+		//添加映射关系
+		prop.setProperty("CZBK001", "zhangsan");
+		prop.setProperty("CZBK002", "lisi");
+		prop.setProperty("CZBK003", "wangwu");
+
+		//创建打印流对象
+		PrintWriter out = new PrintWriter("d.txt");
+		//void list(PrintWriter out)  
+		prop.list(out);
+
+		//释放资源
+		out.close();
+	}
+}
+```
