--- a/articles/01 变量&数据类型.md
+++ b/articles/01 变量&数据类型.md
@@ -11,7 +11,7 @@ Java的发明人詹姆斯·高斯林
 ### 1.2.1 什么是跨平台?
 平台：指的是操作系统(Windows，Linux，Mac)
 
-跨平台：Java程序可以在任意操作系统上运行，一次编写到处运行·  
+跨平台：Java程序可以在任意操作系统上运行，一次编写到处运行
 
 原理：实现跨平台需要依赖Java的虚拟机 JVM （Java Virtual Machine）
 
@@ -21,21 +21,21 @@ Java的发明人詹姆斯·高斯林
 
 误区：JVM都不是跨平台的，JAVA依赖于JVM，那JAVA应该就不跨平台了啊
 
-解释：先理解跨平台含义：不依赖于操作系统，也不依赖硬 件环境。不同的系统下有不同的JVM（JVM是C语言写的）所以JVM不是跨平台的，没毛病。JAVA依赖于JVM，JVM给JAV提供了运行环境，所以JAVA是跨平台的。再重新理解这句话...豁然开朗
+解释：先理解跨平台含义：不依赖于操作系统，也不依赖硬件环境。不同的系统下有不同的JVM（JVM是C语言写的）所以JVM不是跨平台的，没毛病。JAVA依赖于JVM，JVM给JAV提供了运行环境，所以JAVA是跨平台的。再重新理解这句话...豁然开朗
 
  执行过程：Java编译器将Java源程序编译成与平台无关的字节码文件(class文件)，然后由Java虚拟机（JVM）对字节码文件解释执行。该字节码与系统平台无关，是介于源代码和机器指令之间的一种状态。在后续执行时，采取解释机制将Java字节码解释成与系统平台对应的机器指令。这样既减少了编译次数，又增强了程序的可移植性，因此被称为“一次编译，多处运行！”。
 
 ### 1.2.3 JVM,JRE,JDK说明
 
-* 什么是JVM
+* 什么是JVM  
 JVM是java虚拟机(Java Virtual Machine)，java程序需要运行在虚拟机上，不同平台有自己的虚拟机，因此java语言可以跨平台。
 
-* 什么是JRE
+* 什么是JRE  
 JRE包括Java虚拟机和Java程序所需核心类库等
 如果想要运行一个开发好的Java程序，计算机中只需要安装JRE即可
 JRE:JVM+类库
 
-* 什么是JDK
+* 什么是JDK  
 JDK是提供给Java开发人员使用的，其中包含了java的开发工具，也包括了JRE。所以安装了JDK，就不用在单独安装JRE了。
 其中的开发工具：编译工具(javac.exe)、打包工具(jar.exe)等
 JDK:JRE+JAVA的开发工具。
@@ -46,6 +46,56 @@ JDK:JRE+JAVA的开发工具。
 * JDK,JRE,JVM的作用和关系
 JDK包含JRE和开发工具包
 JRE 包含 核心类库和JVM
+
+## 1.3 程序解析
+* 首先编写java源代码程序，扩展名.java
+* 在命令行模式中，输入javac命令对源代码进行编译，生成字节码文件
+  * javac 源文件名.java (如：jdk\bin\java HelloWorld.java)
+* 编译完成后，如果没有报错信息，输入java命令对class字解码文件进行解释运行，执行是不需要添加.class扩展名
+  * Software\jdk\bin\java HelloWorld
+
+```
+title: 工作原理
+participant Java源代码/HelloWorld.java
+participant Java字节码文件/HelloWorld.class
+participant 运行结果
+
+Java源代码/HelloWorld.java->Java字节码文件/HelloWorld.class:编译：javac编译，运行javac（HelloWorld.java）
+Java字节码文件/HelloWorld.class->运行结果:JVM（加载字节码文件，到jvm内存运行）（HelloWorld.java）
+```
+
+## 1.4 环境变量
+环境变量的作用：告诉操作系统到哪里找命令。给操作系统使用，寻找javac。
+
+### 1.4.1 环境变量配置方式1
+windows 配置环境：  
+我的电脑-右键-属性-高级-环境变量-path-新建javac的jdk/bin/目录
+
+### 1.4.2 环境变量配置方法2（提倡方式）
+* path环境变量的参照形配置方法
+  * 创建新的变量名称：JAVA_HOME
+  * 为JAVA_HOME添加变量值：JDK安装目录
+  * 将path环境变量中JDK目录修改：%JAVA_HOME%\bin;
+* path环境变量具有先后顺序
+
+### 1.4.3 设置JAVA_HOME
+(1).为了方便引用，例如，将JDK安装在D\basic\Java\jdk1.8.0目录里，若设置了JAVA_HOME为该目录路径, 那么以后要引用这个路径时, 只需输入%JAVA_HOME%即可, 避免每次引用都需输入很长的路径字符串;
+
+​(2).归一原则, 如果设置classpath或path等其它环境变量时,引用的路径不是D\basic\Java\jdk1.8.0\...，而是%java_home%\....,那么当你JDK安装的路径改变时, 只要改一下JAVA_HOME变量的值即可, 否则,你就要更改所有用绝对路径引用JDK目录的环境变量的值, 如果漏了某个没有修改, 将导致某个程序找不到JDK, 无法运行
+
+​(3).第三方软件会引用约定好的JAVA_HOME变量, 不然, 你将不能正常使用该软件, 要是某个软件不能正常使用, 不妨想想是不是这个问题
+
+### 1.4.4 classpath环境变量
+配置classpath：找到java源文件编译；给jvm使用， 加载字节码文件
+* 创建新的变量名称：classpath
+* 值设定为制定的还有class文件的目录，多个目录间使用分号分割
+* 作用：使用classpath目录中的.class文件可以在任意目录运行
+* 技巧：通常将配置的目录最前面添加配置，即便当前目录，使.class文件搜索时首先搜索当前目录，然后根据目录配置的顺序依次查找，找到后运行
+
+### 1.4.5 path和classpath的区别
+* path环境变量里面记录的是可执行文件，如.exe文件，对可执行文件先在当前路径去找，如果没找到就去path环境变量中配置的路径去找
+* classpath环境变量里记录的是java类的运行文件所在的目录
+
 
 # 第2章 语法格式
 
